--- a/text/latex_text/kapitoly/teorie/3_replikace.tex
+++ b/text/latex_text/kapitoly/teorie/3_replikace.tex
@@ -1,4 +1,5 @@
         \subsection{Replikace}
+        \label{kReplikace}
 Replikace je proces, u kterého jsou data a databázové objekty kopírované z jednoho databázového serveru na druhý a poté synchronizovány pro zachování souladu obou databází. Synchronizací v tomto případě myslíme kopírováním všech změn, které v databázi nastanou. Použitím databáze je možno data distribuovat na různě vzdálená místa nebo mezi mobilní uživatele v rámci počítačové sítě a internetu \citep{Microsoft2013}.
 
 Mnohé moderní aplikace se musí zabývat velkým počtem přístupů do databáze, což může v některých případech způsobovat problémy. Buď je server přetížen počtem připojení a data tedy přicházejí k uživateli pomalu, nebo dokonce úplně vypadne. 
