--- a/text/latex_text/literatura.bib
+++ b/text/latex_text/literatura.bib
@@ -3,7 +3,7 @@
 
 @BOOK{Boszormenyi2013,
   author = {Böszörmenyi, Zoltan and Hans-Jürgen Schönig},
-  title = {PostgreSQL replication: understand basic replication concepts and efficiently replicate PostgreSQL using high-end techniques to protect your data and run your server without interruptions},
+  title = {PostgreSQL Replication: Understand basic replication concepts and efficiently replicate PostgreSQL using high-end techniques to protect your data and run your server without interruptions},
   address = {Birmingham},
   publisher = {Packt Publishing},
   year = {c2013},
@@ -12,7 +12,7 @@
 }
 @BOOK{BellKindahlThalmann2010, 
   author = {Bell, Charles and Mats Kindahl and Lars Thalmann}, 
-  title = {MySQL high availability}, 
+  title = {MySQL High Availability}, 
   volume = {1.},
   address = {Sebastopol, CA},
   publisher = {O'Reilly Media, Inc},
@@ -49,7 +49,7 @@
 }
 @BOOK{Leiter2009, 
   author = {Leiter, Chris}, 
-  title = {Beginning Microsoft SQL server 2008 administration},
+  title = {Beginning Microsoft SQL Server 2008 Administration},
   address = {Indianapolis, IN},
   publisher = {Wiley Pub.},
   year = {2009},
@@ -57,7 +57,7 @@
 }
 @BOOK{Momjian2001, 
   author = {Momjian, Bruce}, 
-  title = {PostgreSQL: introduction and concepts},
+  title = {PostgreSQL: Introduction and Concepts},
   address = {Boston, MA},
   publisher = {Addison-Wesley},
   year = {2001},
@@ -66,7 +66,7 @@
 }
 @BOOK{ObeHsu2011, 
   author = {Obe, Regina and Leo Hsu}, 
-  title = {PostGIS in action},
+  title = {PostGIS in Action},
   address = {London},
   publisher = {Pearson Education [distributor]},
   year = {2011},
@@ -84,7 +84,7 @@
 }
 @BOOK{Oppel2009, 
   author = {Oppel, Andrew J.}, 
-  title = {Databases: a beginner's guide},
+  title = {Databases: A Beginner's Guide},
   address = {New York},
   publisher = {McGraw-Hill},
   year = {2009},
@@ -93,7 +93,7 @@
 }
 @BOOK{RiggsKrossing2010, 
   author = {Riggs, Simon and Hannu Krosing}, 
-  title = {PostgreSQL 9 administration cookbook: solve real-world PostgreSQL problems with over 100 simple, yet incredibly effective recipes},
+  title = {PostgreSQL 9 Administration Cookbook: Solve real-world PostgreSQL problems with over 100 simple, yet incredibly effective recipes},
   address = {Birmingham},
   publisher = {Packt Publishing},
   year = {2010},
@@ -102,7 +102,7 @@
 }
 @BOOK{Vieira2009, 
   author = {Vieira, Robert}, 
-  title = {Professional Microsoft SQL server 2008 programming},
+  title = {Professional Microsoft SQL Server 2008 Programming},
   address = {Indianapolis, IN},
   publisher = {Wiley Pub.},
   year = {2009},
@@ -122,7 +122,23 @@
     series = {Edice Administrace (Computer Press)},
     ISBN = {978-80-251-1949-5}
   }
-
+@BOOK{Date2011,
+  author = {DATE, C.J.},
+  title = {SQL and Relational Theory: How to Write Accurate SQL Code},
+  year = {2011},
+  volume = {2},
+  address = {Sebastopol, CA},
+  publisher = {O'Reilly},
+  ISBN = {978-144-9316-402}
+}
+@ARTICLE{Zak2001,
+  author = {Karel Žák},
+  title = {Historie relačních databází},
+  journal = {Root.cz},
+  year = {2001},
+  timestamp = {2014-04-08},
+  url = {http://www.root.cz/clanky/historie-relacnich-databazi/}
+}
 @ARTICLE{Cincura2009, 
   author = {Činčura, Jiří}, 
   title = {\uppercase{MS SQL 2008} – prostorová data poprvé},
@@ -187,7 +203,6 @@
   urldate = {[cit. 2012-08-08]},
   url = {http://wiki.postgresql.org/wiki/FAQ}
 }
-
 @ARTICLE{pgpool2014,
   author = {pgpool Global Development Group},
   title = {What is pgpool-II?},
