práce na kapitole Konfigurace replikace, opravy chyb, změny názvu

--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -5,7 +5,7 @@
 
   \title{SYNCHRONIZACE A REPLIKACE GEODAT V PROSTŘEDÍ ESRI PLATFORMY}
   \author{Markéta SOLANSKÁ}
-  \thesistype{Magisterská práce}
+  \thesistype{Diplomová práce}
   \advisor{doc. RNDr. Vilém Pechanec, Ph.D.}
 
   \bibliographystyle{csplainnat} %styl citací
@@ -21,7 +21,7 @@
     \begin{declaration}
       \textbf{Čestné prohlášení}
 
-      Prohlašuji, že jsem magisterskou práci magisterského studia oboru Geoinformatika vypracovala samostatně pod vedením RNDr. Viléma Pechance, Ph.D.
+      Prohlašuji, že jsem závěrečnou práci magisterského studia oboru Geoinformatika vypracovala samostatně pod vedením RNDr. Viléma Pechance, Ph.D.
 
       Všechny použité materiály a zdroje jsou citovány s ohledem na vědeckou etiku, autorská práva a zákony na ochranu duševního vlastnictví.
 
@@ -37,7 +37,7 @@
 
       Děkuji také konzultantu Tomáši Vondrovi, za jeho cenné rady a odborný vhled, který vnesl do této práce, stejně tak jako i jeho kolegovi Pavlovi Stěhule.
 
-      Dále děkuji konzultantům Boudewijn van Leeuwen a Zalan Tobak působích na Universitě v Szegedu v Maďarsku za inspirativní podněty při vypracování této práci. 
+      Dále děkuji konzultantům Boudewijn van Leeuwen a Zalan Tobak působích na Universitě v Szegedu v Maďarsku za inspirativní podněty při vypracování této práce. 
       \vspace{4em}
     \end{dedication}
 
@@ -53,7 +53,7 @@
     \listoftables
 
     %------------------------------------------------------------------------- GLOSSARY
-    \makeGlossary               
+    %\makeGlossary               
     %vložení seznamu zkratek, smazat, pokud není třeba
     %formát v nemž se vkládají zkratky, vlouží se pouze ty, které budou použity v textu. 
     % v textu vkládáme zkratku pomocí příkazu \gls{DTM}
@@ -77,7 +77,7 @@
     %------------------------------------------------------------------------- POUŽITÉ METODY A POSTUPY PRÁCE
     \newpage
     \section{POUŽITÉ METODY A POSTUPY PRÁCE}
-      \input{kapitoly/pouzite_metody.tex}
+      %\input{kapitoly/pouzite_metody.tex}
     
     %------------------------------------------------------------------------- TEORETICKÁ VÝCHODISKA
     \newpage
@@ -91,7 +91,7 @@
     
     %------------------------------------------------------------------------- VÝSLEDKY
     \newpage
-    \section{NÁVRH A IMPLEMENTACE REPLIKACE}
+    \section{NÁVRH A KONFIGURACE REPLIKACE}
       \input{kapitoly/implementace/3_priprava_prostredi_pro_konfiguraci.tex}
       \input{kapitoly/implementace/5_implementace_replikace.tex}
 
