--- a/text/latex_text/kapitoly/teorie/3_replikace.tex
+++ b/text/latex_text/kapitoly/teorie/3_replikace.tex
@@ -27,7 +27,7 @@ Druhým způsobem je asynchronní replikace, při které se nová data mohou zap
         \begin{figure}[H]
           \centering
           \includegraphics[scale=1]{../../../grafy/obr/schema_asyncSync_maxiTence.png}
-          \caption {Rozdíl mezi synchronní a asanchronní replikací}
+          \caption {Rozdíl mezi synchronní a asynchronní replikací}
         \end{figure}
 
 Replikace v PostgreSQL umožňuje plnou kopii dat z databáze i pouze výběr některých tabulek. Více o možnostech a způsobech nastavení replikace v kapitole \odkazKapitola{} a PRAKTICKÁ ČÁST :)
