--- a/text/latex_text/kapitoly/teorie/4_arcgis_produkty.tex
+++ b/text/latex_text/kapitoly/teorie/4_arcgis_produkty.tex
@@ -39,7 +39,7 @@
         http://www.esri.com/products nebo http://www.arcdata.cz/produkty-a-sluzby/software/arcgis/}. 
 
         \begin{table}[H]
-          \caption{Verze programu ArcGIS platné od verze 10.1.}
+          \caption{Varianty programu ArcGIS platné od verze 10.1.}
           \label{verzeArcGIS}
           \begin{footnotesize}
             \begin{center}
@@ -96,6 +96,7 @@
                 počet čtenářů &	více než 1\textsuperscript{2} &	více než 1\textsuperscript{2} \\
           master server\textsuperscript{3} & ne\textsuperscript{1} &	ne\textsuperscript{1} \\
             slave server\textsuperscript{3} & ano &	ano \\
+                \hline
                 \multicolumn{3}{l}{\textsuperscript{3}\scriptsize{je možno použít jako master/slave server}} \\
               \end{tabular}
             \end{center}
