práce na kapitole Navrh a konfigurace replikace, opravy chyb, překlepů

--- a/text/latex_text/Solanska_DP.tex
+++ b/text/latex_text/Solanska_DP.tex
@@ -42,6 +42,13 @@
     \end{dedication}
 
     %------------------------------------------------------------------------- NASTAVENÍ POČÍTADLA, OBSAH
+
+    \newpage
+    \begin{center}
+    \section*{zadání}
+    \end{center}
+
+    %------------------------------------------------------------------------- NASTAVENÍ POČÍTADLA, OBSAH
     
     \setcounter{page}{5}          %nastavení počítadla stránek na správnou hodnotu
     \makeTableOfContent{3}        %vložení obsahu, standardně se používají 3 úrovně
@@ -92,8 +99,9 @@
     %------------------------------------------------------------------------- VÝSLEDKY
     \newpage
     \section{NÁVRH A KONFIGURACE REPLIKACE}
-      \input{kapitoly/implementace/3_priprava_prostredi_pro_konfiguraci.tex}
-      \input{kapitoly/implementace/5_implementace_replikace.tex}
+      \input{kapitoly/konfigurace/1_navrh_replikacniho_reseni.tex}
+      \input{kapitoly/konfigurace/2_priprava_prostredi_pro_konfiguraci.tex}
+      \input{kapitoly/konfigurace/3_konfigurace_replikace.tex}
 
     %------------------------------------------------------------------------- DISKUZE
     \newpage
