--- a/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
+++ b/text/latex_text/kapitoly/teorie/5_pouzite_programove_prostredky.tex
@@ -1,4 +1,5 @@
-\subsection{Použité programové prostředky}
+\subsection{Vybrané programové prostředky}
+\label{kPouziteProstredky}
 
 \subsubsection{PostgreSQL 9.x (PostGIS)}
         \label{PostgreSQL}
