--- a/text/latex_text/kapitoly/teorie/4_arcgis_produkty.tex
+++ b/text/latex_text/kapitoly/teorie/4_arcgis_produkty.tex
@@ -97,6 +97,8 @@
           master server\textsuperscript{3} & ne\textsuperscript{1} &	ne\textsuperscript{1} \\
             slave server\textsuperscript{3} & ano &	ano \\
                 \hline
+                \multicolumn{3}{l}{\textsuperscript{1}\scriptsize{http://www.esri.com/software/arcgis/geodatabase/singlex-user-geodatabase}} \\
+                \multicolumn{3}{l}{\textsuperscript{2}\scriptsize{http://help.arcgis.com/en/arcgisdesktop/10.0/help/index.html\#//003n00000007000000}} \\
                 \multicolumn{3}{l}{\textsuperscript{3}\scriptsize{je možno použít jako master/slave server}} \\
               \end{tabular}
             \end{center}
